--- a/src/main/webapp/VIEW/addTe.xhtml
+++ b/src/main/webapp/VIEW/addTe.xhtml
@@ -28,6 +28,7 @@
                                 <f:selectItem itemLabel="#{I18N['notDone']}"
                                               itemValue="#{false}"/>
                                 <p:ajax event="change" process="@this" update="@all" listener="#{teBean.initErrorMessageFormTE()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{teBean.testDateNull()}"/>
                             </p:selectOneButton>
                         </span>
                         <h:panelGroup class="field col-12 md:col-4 p-20-0" rendered="#{!teBean.te.teYn}">
@@ -48,6 +49,7 @@
                                 <p:outputLabel for="input_Te_Date" value="#{I18N['tePage.visitDate']}"/>
                                 <p:datePicker id="input_Te_Date" value="#{teBean.te.teDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100">
                                     <p:ajax event="change" process="@this" update="@all" listener="#{teBean.testDate()}"/>
+                                    <p:ajax event="change" process="@this" update="@all" listener="#{teBean.testDateNull()}"/>
                                 </p:datePicker>
                             </div>
                             <div class="ui-message ui-message-error ui-widget ui-corner-all #{teBean.messageErrorVisitDate}">
