--- a/src/main/webapp/VIEW/updateIc.xhtml
+++ b/src/main/webapp/VIEW/updateIc.xhtml
@@ -24,6 +24,7 @@
                             <p:datePicker id="input_ic_date" value="#{icBean.ic.icDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"
                                           disabled="#{connectionBean.user.roleByIdRole.roleLabel != 'SITE' or !icBean.ic.eventByIdEvent.available}">
                                 <p:ajax event="change" process="@this" update="@all" listener="#{icBean.testDate()}"/>
+                                <p:ajax event="change" process="@this" update="@all" listener="#{icBean.testDateNull()}"/>
                             </p:datePicker>
                         </div>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{icBean.messageErrorIcDate}">
