--- a/src/main/webapp/VIEW/consultSubject.xhtml
+++ b/src/main/webapp/VIEW/consultSubject.xhtml
@@ -54,7 +54,7 @@
                         </span>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" />
                     </span>
                 </h:form>
             </div>
