--- a/src/main/webapp/VIEW/addVs.xhtml
+++ b/src/main/webapp/VIEW/addVs.xhtml
@@ -36,8 +36,9 @@
                             <h:panelGroup class="field col-12 md:col-4 p-20-0">
                                 <p:outputLabel for="input_vs_nd" value="#{I18N['vsPage.vsNd']}"/>
                                 <p:inputTextarea  rows="6" cols="33" id="input_vs_nd" class="label" value="#{vsBean.vs.vsNd}"
-                                                  placeholder="#{I18N['vsPage.vsNd.placeholder']}"/>
-                                <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testInputVsNd()}"/>
+                                                  placeholder="#{I18N['vsPage.vsNd.placeholder']}">
+                                    <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testInputVsNd()}"/>
+                                </p:inputTextarea>
                             </h:panelGroup>
                         </h:panelGroup>
                         <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorVisitNd}">
